# muninndb

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  dream.go  go.mod  go.sum  install.ps1  install.sh  muninn.go  remember.go  types.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  publish-sdk.yml  release.yml
cmd/bench/: adapters.go
cmd/eval-bible/: phase1.go
cmd/muninn/: admin.go  api_key.go  coverage_hardening_test.go  coverage_test.go  dream.go  envfile.go  envfile_test.go  exec.go  extract_operation_test.go  help.go  init.go  init_test.go  integration_test.go  lifecycle.go  lifecycle_test.go  main.go  mcp_stdio.go  mcp_stdio_test.go  process_unix.go  server.go  server_test.go  setup_ai.go  setup_ai_test.go  smoke_exhaustive_test.go  status.go  upgrade.go  upgrade_test.go  vault.go  vault_test.go
contrib/: muninndb.service
docs/: agent-prompting.md  architecture.md  auth.md  cognitive-primitives.md  durability-guarantees.md  engram.md  how-memory-works.md  index.md  key-space-schema.md  plugins.md  quickstart.md  retrieval-design.md  self-hosting.md
docs/adr/: 2026-03-04-coactivation-count.md
docs/integrations/: traefik-claude-chatgpt.md
docs/plans/: 2026-03-04-association-archiving.md
internal/auth/: keys_store.go  keys_store_test.go  middleware.go  middleware_internal_test.go  middleware_test.go  types.go
internal/backup/: scheduler.go  scheduler_test.go
internal/cognitive/: hebbian.go  mechanics_proof_test.go  store_adapters.go  transition.go  (+1 more)
scripts/: check-build-tags.sh  eval-bible-setup.sh
sdk/python/: pyproject.toml
sdk/python/muninn/: client.py  langchain.py  types.py
sdk/python/tests/: test_sdk_smoke.py  test_sdk_unit.py
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  plugin-config-utils.test.js  vite.config.js
(+210 files in other folders)
