[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muninn-python"
version = "0.0.0-dev"
description = "Python SDK for MuninnDB — the cognitive memory database"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "MuninnDB", email = "hello@muninndb.com" }]
keywords = [
    "memory", "database", "langchain", "ai", "llm", "cognitive",
    "semantic-search", "embeddings", "vector-database", "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "langchain-core>=0.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
]

[project.urls]
Homepage = "https://muninndb.com"
Repository = "https://github.com/scrypster/muninndb"
Documentation = "https://github.com/scrypster/muninndb/blob/main/sdk/python/README.md"
"Bug Tracker" = "https://github.com/scrypster/muninndb/issues"

[tool.hatch.build.targets.wheel]
packages = ["muninn"]

[tool.hatch.build.targets.sdist]
include = [
    "muninn/",
    "README.md",
    "requirements.txt",
]
exclude = [
    "muninn/__pycache__/",
    "muninn/*.pyc",
    "muninn/*.bak",
    "muninn/client_tmp.py",
]
